// Copyright 2025 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package auth.service.bq;

option go_package = "go.chromium.org/luci/auth_service/api/bqpb";

import "google/protobuf/timestamp.proto";

// RoleRow represents a role defined in either:
// - Auth Services's `permissions.cfg` (prefix 'role/');
// - a LUCI project's `realms[-dev].cfg` (prefix 'customRole/'); or
// - internally used roles (prefix 'role/luci.internal.').
message RoleRow {
  // Name of the role, e.g. 'role/luci.tester'.
  string name = 1;
  // Names of other roles also granted with the above role.
  repeated string subroles= 2;
  // Permissions granted with the role, either directly or indirectly from
  // nested subroles.
  repeated string permissions = 3;
  // URL to view the config in which the role was defined.
  string url = 4;
  // The timestamp when the BQ export was initialized.
  google.protobuf.Timestamp exported_at = 5;
}
